--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cachefilesd (0.10.9-0.1~aroth~ppa1) wily; urgency=medium
+
+  * new upstream version
+  * use systemd
+
+ -- Andreas Roth <aroth@arsoft-online.com>  Thu, 24 Mar 2016 07:10:02 +0100
+
 cachefilesd (0.10.5-1) unstable; urgency=low
 
   * New upstream version
